Update donation methods

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
           <div class="card-body">
             <h4 class="card-title">Tautulli</h4>
 
-            <a target="_blank" href="https://www.patreon.com/bePatron?u=10078609"
+            <a target="_blank" href="https://www.patreon.com/join/tautulli"
                onclick="gtag('event', 'donate', {event_category: 'ecommerce', event_label: 'Tautulli - Patreon', method: 'Patreon', variant: 'Tautulli'})"
                class="btn btn-link text-gamboge hover-text-alabaster">
               <i class="fab fa-patreon"></i> Patreon</a>
@@ -427,10 +427,6 @@
                onclick="gtag('event', 'donate', {event_category: 'ecommerce', event_label: 'Tautulli - Paypal', method: 'Paypal', variant: 'Tautulli'})"
                class="btn btn-link text-gamboge hover-text-alabaster">
               <i class="fab fa-paypal"></i> PayPal</a>
-            <a href="#" data-toggle="modal" data-target="#bitcoin-modal" data-address="3FdfJAyNWU15Sf11U9FTgPHuP1hPz32eEN"
-               onclick="gtag('event', 'donate', {event_category: 'ecommerce', event_label: 'Tautulli - Bitcoin', method: 'Bitcoin', variant: 'Tautulli'})"
-               class="btn btn-link text-gamboge hover-text-alabaster">
-              <i class="fab fa-bitcoin"></i> Bitcoin</a>
           </div>
         </div>
         <div class="card bg-shark">
@@ -441,11 +437,6 @@
                onclick="gtag('event', 'donate', {event_category: 'ecommerce', event_label: 'Tautulli Remote - Paypal', method: 'Paypal', variant: 'Tautulli Remote'})"
                class="btn btn-link text-gamboge hover-text-alabaster">
               <i class="fab fa-paypal"></i> PayPal</a>
-            <a href="#" data-toggle="modal" data-target="#bitcoin-modal" data-address="38To4y9S2uAHLWcGG7wyNuXQZa2cwwYPGp"
-               onclick="gtag('event', 'donate', {event_category: 'ecommerce', event_label: 'Tautulli Remote - Bitcoin', method: 'Bitcoin', variant: 'Tautulli Remote'})"
-               class="btn btn-link text-gamboge hover-text-alabaster">
-              <i class="fab fa-bitcoin"></i> Bitcoin</a>
-
           </div>
         </div>
       </div>
