Update GitHub link

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
     <div class="row justify-content-md-center">
       <div class="col-md-4">
         <p class="text-center lead">Tautulli</p>
-        <a target="_blank" href="https://github.com/JonnyWong16/plexpy"
+        <a target="_blank" href="https://github.com/Tautulli/Tautulli"
            onclick="gtag('event', 'download', {event_category: 'engagement', event_label: 'Download - Tautulli', variant: 'Tautulli'})">
           <img alt='Get it on GitHub' src='images/github_badge.png' class="img-fluid mx-auto"/>
         </a>
