--- a/index.html
+++ b/index.html
@@ -423,6 +423,10 @@
                onclick="gtag('event', 'donate', {event_category: 'ecommerce', event_label: 'Tautulli - Patreon', method: 'Patreon', variant: 'Tautulli'})"
                class="btn btn-link text-gamboge hover-text-alabaster">
               <i class="fab fa-patreon"></i> Patreon</a>
+            <a target="_blank" href="https://github.com/sponsors/JonnyWong16"
+               onclick="gtag('event', 'donate', {event_category: 'ecommerce', event_label: 'Tautulli - Github', method: 'Github', variant: 'Tautulli'})"
+               class="btn btn-link text-gamboge hover-text-alabaster">
+              <i class="fab fa-github"></i> Github</a>
             <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=6XPPKTDSX9QFL&lc=US&item_name=Tautulli&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_LG%2egif%3aNonHosted"
                onclick="gtag('event', 'donate', {event_category: 'ecommerce', event_label: 'Tautulli - Paypal', method: 'Paypal', variant: 'Tautulli'})"
                class="btn btn-link text-gamboge hover-text-alabaster">
