Fix typo in Tautulli Remote description

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
               <small>beta</small>
             </small>
           </sup></h3>
-          <p class="text-gray-chateau">Download the offical app on Android to view stats on the go.</p>
+          <p class="text-gray-chateau">Download the official app on Android to view stats on the go.</p>
         </div>
       </div>
 
