--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta content="Tautulli" property="og:site_name">
   <meta content="website" property="og:type">
   <meta content="https://tautulli.com" property="og:url">
-  <meta content="https://tautulli.com/images/logo.png" property="og:image">
+  <meta content="https://tautulli.com/images/logo-circle.png" property="og:image">
 
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
