--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
               <small>beta</small>
             </small>
           </sup></h3>
-          <p class="text-gray-chateau">Download the official app on Android to view stats on the go.</p>
+          <p class="text-gray-chateau">Download the official app to view activity and stats on the go.</p>
         </div>
       </div>
 
@@ -359,7 +359,7 @@
       </div>
       <div class="col-md-4">
         <p class="text-center lead">Tautulli Remote</p>
-        <a target="_blank" href='https://play.google.com/store/apps/details?id=com.williamcomartin.plexpyremote'
+        <a target="_blank" href='https://play.google.com/store/apps/details?id=com.tautulli.tautulli_remote'
            onclick="gtag('event', 'download', {event_category: 'engagement', event_label: 'Download - Tautulli Remote', variant: 'Tautulli Remote'})">
           <img alt='Get it on Google Play' src='images/google_play_badge.png' class="img-fluid mx-auto"/>
         </a>
@@ -379,7 +379,7 @@
     <div class="row support-button">
 
       <div class="col-md-3">
-        <a target="_blank" href="https://github.com/Tautulli/Tautulli-Wiki/wiki"
+        <a target="_blank" href="https://github.com/Tautulli/Tautulli/wiki"
            onclick="gtag('event', 'support', {event_category: 'engagement', event_label: 'Github FAQ'})">
           <i class="fab fa-github fa-3x"></i></a>
       </div>
@@ -437,10 +437,13 @@
           <div class="card-body">
             <h4 class="card-title">Tautulli Remote</h4>
 
-            <a target="_blank" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ADRXXSWUJF788"
-               onclick="gtag('event', 'donate', {event_category: 'ecommerce', event_label: 'Tautulli Remote - Paypal', method: 'Paypal', variant: 'Tautulli Remote'})"
+            <a target="_blank" href="https://github.com/sponsors/TheMeanCanEHdian"
+               onclick="gtag('event', 'donate', {event_category: 'ecommerce', event_label: 'Tautulli Remote - Github', method: 'Github', variant: 'Tautulli Remote'})"
                class="btn btn-link text-gamboge hover-text-alabaster">
-              <i class="fab fa-paypal"></i> PayPal</a>
+              <i class="fab fa-github"></i> Github</a>
+          <a target="_blank" href="https://play.google.com/store/apps/details?id=com.tautulli.tautulli_remote"
+             class="btn btn-link text-gamboge hover-text-alabaster">
+            <i class="fab fa-android"></i> In-app</a>
           </div>
         </div>
       </div>
@@ -475,7 +478,7 @@
   <div class="container">
     <div class="text-center">
       <div class="footer-content">
-        <p>Copyright &copy; 2020 | JonnyWong16 / WilliamComartin</p>
+        <p>Copyright &copy; 2021 | JonnyWong16 / WilliamComartin</p>
         <p>Tautulli is not affiliated with Plex Inc.</p>
       </div>
     </div>
