Update homepage with iOS information.

--- a/index.html
+++ b/index.html
@@ -238,14 +238,11 @@
       <div class="col-md-3 col-sm-6 col-xs-12 text-center">
         <div class="features-item">
           <div class="m-5">
-            <i class="fab fa-android fa-3x"></i>
+            <i class="fab fa-android fa-3x mr-2"></i>
+            <i class="fab fa-apple fa-3x ml-2"></i>
           </div>
 
-          <h3>Tautulli Remote <sup>
-            <small>
-              <small>beta</small>
-            </small>
-          </sup></h3>
+          <h3>Tautulli Remote</h3>
           <p class="text-gray-chateau">Download the official app to view activity and stats on the go.</p>
         </div>
       </div>
@@ -363,6 +360,14 @@
            onclick="gtag('event', 'download', {event_category: 'engagement', event_label: 'Download - Tautulli Remote', variant: 'Tautulli Remote'})">
           <img alt='Get it on Google Play' src='images/google_play_badge.png' class="img-fluid mx-auto"/>
         </a>
+        <!-- <a target="_blank" href=''
+           onclick="gtag('event', 'download', {event_category: 'engagement', event_label: 'Download - Tautulli Remote', variant: 'Tautulli Remote'})">
+          <img alt='Download on the App Store' src='images/app_store_badge.png' class="img-fluid mx-auto"/>
+        </a> -->
+        <a target="_blank" href='https://testflight.apple.com/join/G29OmIm1'
+           onclick="gtag('event', 'download', {event_category: 'engagement', event_label: 'Download - Tautulli Remote', variant: 'Tautulli Remote'})">
+          <img alt='Try it on TestFlight' src='images/test_flight_badge.png' class="img-fluid mx-auto"/>
+        </a>
       </div>
     </div>
 
@@ -444,6 +449,9 @@
           <a target="_blank" href="https://play.google.com/store/apps/details?id=com.tautulli.tautulli_remote"
              class="btn btn-link text-gamboge hover-text-alabaster">
             <i class="fab fa-android"></i> In-app</a>
+          <!-- <a target="_blank" href=""
+             class="btn btn-link text-gamboge hover-text-alabaster">
+            <i class="fab fa-apple"></i> In-app</a> -->
           </div>
         </div>
       </div>
