Update copyright dates.

--- a/404.html
+++ b/404.html
@@ -50,7 +50,7 @@
   <div class="container">
     <div class="text-center">
       <div class="footer-content">
-        <p>Copyright &copy; 2018 | JonnyWong16 / WilliamComartin</p>
+        <p>Copyright &copy; 2021 | JonnyWong16 / WilliamComartin / TheMeanCanEHdian</p>
         <p>Tautulli is not affiliated with Plex Inc.</p>
       </div>
     </div>
