--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
   <div class="container">
     <div class="text-center">
       <div class="footer-content">
-        <p>Copyright &copy; 2021 | JonnyWong16 / WilliamComartin</p>
+        <p>Copyright &copy; 2021 | JonnyWong16 / WilliamComartin / TheMeanCanEHdian</p>
         <p>Tautulli is not affiliated with Plex Inc.</p>
       </div>
     </div>
