Update Tautulli Remote App Store link

--- a/index.html
+++ b/index.html
@@ -360,14 +360,10 @@
            onclick="gtag('event', 'download', {event_category: 'engagement', event_label: 'Download - Tautulli Remote', variant: 'Tautulli Remote'})">
           <img alt='Get it on Google Play' src='images/google_play_badge.png' class="img-fluid mx-auto"/>
         </a>
-        <!-- <a target="_blank" href=''
+        <a target="_blank" href='https://apps.apple.com/us/app/tautulli-remote/id1570909086'
            onclick="gtag('event', 'download', {event_category: 'engagement', event_label: 'Download - Tautulli Remote', variant: 'Tautulli Remote'})">
           <img alt='Download on the App Store' src='images/app_store_badge.png' class="img-fluid mx-auto"/>
-        </a> -->
-        <a target="_blank" href='https://testflight.apple.com/join/G29OmIm1'
-           onclick="gtag('event', 'download', {event_category: 'engagement', event_label: 'Download - Tautulli Remote', variant: 'Tautulli Remote'})">
-          <img alt='Try it on TestFlight' src='images/test_flight_badge.png' class="img-fluid mx-auto"/>
-        </a>
+      </a>
       </div>
     </div>
 
