Migrate to Google Analytics 4

--- a/index.html
+++ b/index.html
@@ -521,14 +521,14 @@
 
 <script src="js/script.min.js"></script>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111522699-1"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JW9GTT49EH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-111522699-1');
+  gtag('config', 'G-JW9GTT49EH');
 </script>
 
 </body>
